FIX: Adjust avatar and overflow issues in chat headers

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -151,6 +151,7 @@ $float-height: 530px;
     color: var(--primary);
     display: flex;
     align-items: center;
+    width: 100%;
     .chat-channel-title {
       display: flex;
       width: calc(95% - 0.5em);
@@ -731,7 +732,7 @@ $float-height: 530px;
   .tc-avatar-container {
     display: inline-block;
     width: 1.5em;
-    height: 1.5em;
+    height: auto;
     margin-right: 0.25em;
   }
   .dm-multi-count {
